noinst_LIBRARIES=libsocket.a

libsocket_a_SOURCES=readcrlf.c readline.c readn.c readvrec.c set_address.c tcp_client.c tcp_client_ex.c tcp_server.c udp_client.c udp_server.c sendvrec.c tcp_read.c tcp_send.c udp_send_msg.c

INCLUDES=

AM_CFLAGS=-Wall -finline-functions -rdynamic

CFLAGS=-g

#EXTRA_DIST = Readme.txt
